--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -158,11 +158,29 @@ footer {
 }
 
 .participants ul {
-  list-style-type: disc;
-  padding-left: 20px;
+  padding-left: 0;
 }
 
 .participants ul li {
+  display: flex;
+  align-items: center;
   margin-bottom: 5px;
+}
+
+.participants ul li span {
+  flex-grow: 1;
   color: #1565c0;
+}
+
+.delete-participant {
+  background: none;
+  border: none;
+  color: red;
+  font-size: 18px;
+  cursor: pointer;
+  transition: color 0.2s;
+}
+
+.delete-participant:hover {
+  color: darkred;
 }
